fixing z-index on sidecart

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -294,6 +294,7 @@ max-width:100%;
     position:absolute;
     right:0;
     padding-right:2em;
+    z-index:999;
 }
 .cart>p>i{
 	margin-right:6em;
